# nobaddata

./: README.md  pyproject.toml
examples/: basic_engine_usage.py  basic_import.py  basic_loder_usage.py  config.yaml  data.csv
nobaddata/checks/: __init__.py  duplicate.py  nulls.py  range.py
nobaddata/cli/: main.py
nobaddata/config/: loader.py
nobaddata/core/: check.py  engine.py  registry.py
nobaddata/models/: result.py
nobaddata/reporting/: console.py  reporter.py
tests/checks/: test_duplicates.py  test_nulls.py  test_range.py
tests/core/: test_engine.py
tests/reporting/: test_reporter.py
