[project]
name = "nobaddata"
version = "0.1.0"
description = "A flexible, rule-based data quality framework for validating datasets, enforcing constraints, and ensuring data integrity."
authors = [{ name = "Vitor" }]
requires-python = ">=3.10"

[project.scripts]
nobaddata = "nobaddata.cli.main:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=nobaddata --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/tests/*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pass",
    "@abstractmethod",
]